--- a/479report/report.tex
+++ b/479report/report.tex
@@ -64,7 +64,7 @@ In the America, about 1 in 8 women will develop breast cancer at some point in t
 
 It’s important to note the difference between two types of mammograms: screening and diagnostic. Mammogram screens are routinely implemented to check for any abnormalities. If an abnormality is found, it calls for further inspection and possibly a follow up diagnostic test. This test could be a diagnostic mammogram or one of the several other alternatives, such as a biopsy. The diagnostic test will result in a benign or malignant decision for the tumor. This project is focuses on screening mammograms, which try to detect and classify any abnormalities that might signify cancer and lead to additional testing.  
 
-Despite the benefits from mammogram screens, there are serious downfalls. For starters, nearly 1 in 5 screenings will not detect breast cancer if it is present, resulting in a false-negative.  Estimates suggest that approximately 10-20\% of mammograms without breast cancer will be incorrectly diagnosed with an abnormality, resulting in a false-positive as well. Nearly half of women who get an annual mammogram over a 10-year period will receive an incorrect positive test result because of this high false-positive rate.\cite{https://www.cancer.org/cancer/breast-cancer/screening-tests-and-early-detection/mammograms/limitations-of-mammograms.html}.  Not only does this create inefficiencies in the healthcare system, but it also leads to emotional stress and anxiety in women who are incorrectly diagnosed with cancer. Because of these downfalls, many people have questioned whether mammograms should be routinely implemented. 
+Despite the benefits from mammogram screens, there are serious downfalls. For starters, nearly 1 in 5 screenings will not detect breast cancer if it is present, resulting in a false-negative.  Estimates suggest that approximately 10-20\% of mammograms without breast cancer will be incorrectly diagnosed with an abnormality, resulting in a false-positive as well. Nearly half of women who get an annual mammogram over a 10-year period will receive an incorrect positive test result because of this high false-positive rate.\cite{american cancer society}.  Not only does this create inefficiencies in the healthcare system, but it also leads to emotional stress and anxiety in women who are incorrectly diagnosed with cancer. Because of these downfalls, many people have questioned whether mammograms should be routinely implemented. 
 
 The previous reasons have lead to our motivation in this topic. More effective diagnosis could reduce overdiagnosis, overtreatment, fatality rates, healthcare costs, and financial and emotional burden put on patients. Even marginally small improvements could prove quite meaningful; over 33 million mammograms are performed each year in the United States.\cite{Newsroom}
 
@@ -74,7 +74,7 @@ The previous reasons have lead to our motivation in this topic. More effective d
 
 Within the past five years, there’s been an increase in research focused on improving the various stages of mammograms via machine learning. From literature, most work falls under two categories: Multi-Stage and End-to-End approaches. The process from screening to diagnosis can be split into three stages: detection, further analysis, and final diagnosis. There has been some, but not much, research on End-to-End approaches, which attempt to tackle all three stages of mammogram assessment.\cite{becker_marcon_ghafoor_wurnig_frauenfelder_boss_2017}\cite{carneiro_nascimento_bradley_2015}\cite{zhu_lou_vang_xie_2016}
 
-Most research, however, focuses on addressing a singular stage in this process, such as mass detection.\cite{dhungel_carneiro_bradley_2015}\cite{ertosun_rubin_2015} Most similar to our project is the additional research that’s been done trying to classify specific regions of interest. Much of this research addresses classification by using deep convolutional neural networks\cite{rampun_scotney_morrow_wang_2018}\cite{rakhlin_shvets_iglovikov_kalinin_2018}, which is also the a method we will applying. Some of the techniques employed are more advanced and beyond the scope of our knowledge. This research also varies on the resolution of the images used as well as the preprocessing techniques. The results from this published research ranged from marginally to noticeably more effective at classifying abnormalities when we compared our evaluation metrics. 
+Most research, however, focuses on addressing a singular stage in this process, such as mass detection.\cite{dhungel_carneiro_bradley_2015}\cite{ertosun_rubin_2015}\cite{rong_shasha_qingzheng_kun_2018} Most similar to our project is the additional research that’s been done trying to classify specific regions of interest. Much of this research addresses classification by using deep convolutional neural networks\cite{rampun_scotney_morrow_wang_2018}\cite{rakhlin_shvets_iglovikov_kalinin_2018}\cite{huynh_li_giger_2016}, which is also the a method we will applying. Some of the techniques employed are more advanced and beyond the scope of our knowledge. This research also varies on the resolution of the images used as well as the preprocessing techniques. The results from this published research ranged from marginally to noticeably more effective at classifying abnormalities when we compared our evaluation metrics. 
 
 
 %{Table \ref{tab:some-table} shows an example for formatting a table.
@@ -324,7 +324,7 @@ Contributions - Dan, Zheng Ni, Chong Wei\\
 
 Preprocessing - Nemo, Zheng Ni
 
-Model Selection- Zheng Ni 
+Model Selection- Zheng Ni , Dan
 
 Evaluation and Parameter Tuning - Nemo, Zheng Ni
 
